added images path

--- a/templates/latex/main.tex
+++ b/templates/latex/main.tex
@@ -18,7 +18,7 @@
 
 \begin{titlepage}
 	\begin{center}
-
+		\includegraphics[scale=1.5]{download.png}
 	\end{center}
 \end{titlepage}
 
@@ -33,9 +33,9 @@
 <++>
 
 \newpage
-\addcontentsline{toc}{section}{Litteraturliste}
-\renewcommand{\bibname}{Litteraturliste}
-\bibliographystyle{plain}
-\bibliography{reference}
+%\addcontentsline{toc}{section}{Litteraturliste}
+%\renewcommand{\bibname}{Litteraturliste}
+%\bibliographystyle{plain}
+%\bibliography{reference}
 
 \end{document}
